# OpenACP

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: authority-boundary.md  bootstrap.md  codex-install-and-start.md  concepts.md  coordination.md  getting-started.md  handoff-consume.md  positioning.md  release-checklist.md  role-model.md  skill-install.md  source-driven-coordination.md  validator.md
docs/decisions/: ADR-001-dual-adoption-path.md  ADR-002-validator-scope.md
examples/frontier-lane-flow/: authority-charter.json
examples/multi-frontier-closure/: README.md  card-registry.md  current-manifest.json  decision-registry.json  lane-registry.json  runtime-boundary.json  sequence-registry.json  source-pack.json  source-status-registry.json
examples/multi-worktree-review/: README.md
examples/prd-only-bootstrap/: assumptions.json  authority-charter.json  scope-boundary.json  source-pack.json  task-card.json
examples/primary-orchestrator-flow/: README.md  final-consume-result.json  final-consume-status.json  primary-authority-charter.json
examples/primary-two-frontier-kickoff/: README.md
examples/single-worker-flow/: README.md  authority-charter.json  formal-report-example.md  handoff.json  machine-summary.json  review-report.json  source-pack.json  status-report.json  (+1 more)
openaccp/: __init__.py  __main__.py  cli.py  validate.py  version.py
openacp/: __main__.py  cli.py  validate.py
schemas/: assumption-ledger.schema.json  authority-charter.schema.json  child-ledger.schema.json  consume-result.schema.json  current-manifest.schema.json  decision-registry.schema.json  frontier-closure.schema.json  handoff.schema.json  lane-registry.schema.json  machine-summary.schema.json  review-report.schema.json  runtime-boundary.schema.json  scope-boundary.schema.json  sequence-registry.schema.json  source-pack.schema.json  source-status-registry.schema.json  status-report.schema.json  task-card.schema.json
templates/: card-registry.md  child-ledger.json  consume-result.json  decision-registry.json  formal-report.md  frontier-closure.json  frontier-orchestrator-launcher.md  frontier-prompt.md  handoff.md  human-status.md  lane-registry.json  machine-summary.json  primary-orchestrator-launcher.md  review-report.md  reviewer-prompt.md  runtime-boundary.json  short-chat-launcher.md  source-status-registry.json  task-card.md  worker-prompt.md
tools/: openaccp_cli.py  openaccp_validate.py  openaccp_validate_selftest.py  openacp_validate_selftest.py
(+40 files in other folders)
