[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "openaccp"
dynamic = ["version"]
description = "Coordinate multi-agent software delivery across source facts, task cards, handoffs, reviews, worktrees, and final acceptance."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Vyqo AI" }]
keywords = [
  "ai-agents",
  "agentic-workflow",
  "multi-agent",
  "software-delivery",
  "coordination",
  "handoff",
  "task-cards",
  "worktrees",
  "validator",
  "codex",
  "claude-code",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = ["jsonschema>=4.18"]

[project.urls]
Homepage = "https://github.com/0fuk/OpenACCP"
Repository = "https://github.com/0fuk/OpenACCP"
Documentation = "https://github.com/0fuk/OpenACCP#readme"
Issues = "https://github.com/0fuk/OpenACCP/issues"

[project.scripts]
openaccp = "openaccp.cli:main"
openaccp-validate = "openaccp.validate:main"

[tool.setuptools]
packages = ["openaccp", "openaccp.schemas"]

[tool.setuptools.dynamic]
version = {attr = "openaccp.version.VERSION"}

[tool.setuptools.package-data]
"openaccp.schemas" = ["*.schema.json"]
